--- a/style.css
+++ b/style.css
@@ -6,32 +6,18 @@
   margin: 0;
 }
 
-body  {
+body {
   margin: 0;
-  overflow-x: hidden;
-  font-family: 'Vollkorn', serif;
 }
 
 h1 {
   font-weight: normal;
   font-size: 28px;
-  font-family: 'Vollkorn', serif;
 }
-
 
 header {
-  display: flex;
   padding: 35px 35px;
-  align-items: center;
-  justify-content: space-between;
-position: sticky;
-position: -webkit-sticky;
-top: 0;
-
-}
-.sss img{
-  width: 70px;
-  height: 70px;
+  display: flex;
 }
 .sp-menu {
   margin-left: auto;
@@ -72,6 +58,7 @@ top: 0;
   font-size: 32px;
   cursor: pointer;
 }
+
 .overlay ul {
   list-style-type: none;
   margin: 0;
@@ -113,269 +100,151 @@ a {
   font-weight: lighter;
 }
 
-/* enn */
-.enn {
-  width: 200px;
-  height: 200px;
-  margin: 0 0 0 240px;
-  font-size: 12px;
-}
-div svg {
-  overflow: visible;
-}
-div path {
-  fill: none;
-}
-div text {
-  fill: black;
-}
-.block {
-  width: 160px;
-  height: 160px;
-  margin: auto;
-}
-.circleText {
-  overflow: visible;
-  animation: rotation 18s linear infinite;
-  &__circle {
-    fill: none;
-  }
-  &__text {
-    fill: #000;
-    font-size: 12px;
-    letter-spacing: 0.05em;
-  }
-}
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+.aaa {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  margin-top: 8px;
 }
 
-
-/* name */
-
-.name h1{
-  font-size: 60px;
-}
-.name{
-  margin: 0 50px 0 50px;
-}
-.niwa3{
-  width: 410px;
-  height: 480px;  
-}
-.noo img{
-  display: block;
-  margin: 0 20px 50px 0;
+.aaa img {
+  vertical-align: bottom;
 }
 
-/* main1 */
-.main1{
-text-align: center;
-padding: 2px 30px;
-margin-top: 100px;
-}
-.desc {
-  margin: 3px 10px 3px; 
-  font-size: 16px;
-  font-weight: normal;
-}
-/* main */
-.main {
-margin: 30px 3px 50px;
-padding: 0 70px;
-}
-.main a {
-  all: unset;
-  border: 1px solid #202022;
-  color: #202022;
-  font-size: 18px;
-  cursor: pointer;
-  padding: 10px 60px;
-}
-.main a:hover {
-  background-color: #cacaca;
-  transition: none;
-  color: white;
-}
-  .desc{
-    margin: 5px 1px 5px;
-    padding: 5px 0 5px;
-  }
-  .desc h2{
-    font-size: 22px;
-  }
+/* section class="ccc" */
+.ccc {
+  padding: 16px;
+  margin: 32px 0px 38px;
 
-.main img{
-  width: 300px;
-  height: 350px;
-  padding: 0 20px 0;
- 
 }
 
-/* skills */
-.skk{
-  margin: 0 auto;
-  padding: 8px 20px;
-}
-.skk h1{
+.ccc h1 {
+  margin: 32px 32px;
   text-align: center;
+  font-weight: bold;
+
 }
-.skills1 .ttt{
-  margin:  10px 20px 15px;
-  padding: 10px;
+
+.ccc p {
+  padding: 16px 2px;
+  font-size: 14px;
 }
-.dll{
+.main-img{
+  height: 150px;
   width: 100%;
-  height: 250px;
+}
+/* <section class="img"> */
+
+.img h1 {
+  text-align: center;
+  font-weight: bold;
+}
+
+
+.img .img1 img {
+  height: 280px;
+  width: 100%;
+}
+
+
+/* News */
+.News {
+  padding: 32px 16px;
+}
+
+.News h1 {
+  margin-top: 64px;
+  margin-bottom: 64px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.News p {
+  padding: 16px;
+  font-size: 14px;
+}
+
+
+/*  <section class="Contact">*/
+.Contact {
+  padding: 8px 16px;
+}
+
+.Contact h1 {
+  margin-top: 16px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.ttt {
+  margin-top: 32px;
+
+}
+
+label {
   display: block;
+  text-decoration: none;
+  margin-top: 8px;
+}
+
+input[type=text] {
+  width: 100%;
+  height: 30px;
+  display: block;
+}
+
+
+input[type=mail] {
+  width: 100%;
+  height: 30px;
+  display: block;
+}
+
+textarea {
+  resize: vertical;
+  width: 100%;
+  height: 200px;
 
 }
-.tt1{
-  background: #cacaca;
-    border-radius: 18px;
-    margin: 8px;
-    padding: 8px;
-    margin-top: 40px;
-}
-.tt1 p{
-  margin: 8px;
-  margin-top: 22px;
-}
-.tt1 h3{
-  margin: 24px;
-  text-align: center;
-}
-/* works */
-.Works2 h1{
-  text-align: center;
-  margin-top: 30px;
-  font-size: 42px;
-}
-.Works2 p {
-  font-size: 18px;
-  text-align: center;
-}
-.Works2{
-  margin: 0 auto;
-  background: #cacaca;
-  padding: 8px 15px;
-}
-  .Works1 img{
-    object-fit: cover;
-    width: 400px;
-    height: auto;
-    border: #000;
-    margin: 20px  0  20px 20px;
-  }
-  .Work1 p{
-    margin-bottom: 40px;
-  }
-  
 
-/* Contact */
-.Contact{
+.btn {
   text-align: center;
-  background: #202022;
-  color: white;
-  margin: 0;
+  margin-top: 32px;
 }
-.Contact1{
-  margin: 0;
-}
-.Contact1 h1{
-  font-size: 42px;
-}
+
 .Contact a {
   all: unset;
-  border: 1px solid white;
-  border-radius: 18px;
-  color: #fbfeff;
-  font-size: 18px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  font-size: 16px;
   cursor: pointer;
-  padding: 10px 60px;
+  padding: 10px 70px;
 }
+
 .Contact a:hover {
   background-color: white;
   transition: none;
+  border: 1px solid black;
   color: black;
 }
-.ini{
-  margin-top:   80px;
-  margin-bottom: 80px;
-}
-.ini p{
-  font-size: 12px;
-}
-.aoa {
-  margin-top: 24px;
-}
-
-#to_top{
-  position: fixed;
-  right: 16px;
-  bottom: 16px;
-  opacity: 0;
-  }
-  #to_top.scrolled{
-  opacity: 1;
-  }
 
 
-  /* tra */
-.love {
+/* footer */
+footer {
+  margin-top: 64px;
   text-align: center;
-}
-.tra{
-  margin: 2px 20px  3px;
-  text-align: center;
+  padding: 6px;
+  background: black;
 }
 
-
-  /* main 11*/
-  .main3 {
-  margin: 30px 3px 50px;
-  padding: 0 70px;
-  }
-
-.desc1 h2{
-  font-size: 22px;
+small {
+  font-size: 8px;
+  color: white;
 }
-.pic1{
-  width: 200px;
-  height: 250px;
-  padding: 0 25px 20px;
- 
-}
+
 @media (min-width: 600px) {
-/* Ａp追加 */
 
-#to_top{
-  position: fixed;
-  right: 16px;
-  bottom: 16px;
-  opacity: 0;
-  }
-  #to_top.scrolled{
-  opacity: 1;
-  }
-
-
-  
-  header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-
-  }
-  
   /* header */
   .pc-menu {
     display: block;
@@ -401,338 +270,41 @@ padding: 0 70px;
   .sp-menu {
     display: none;
   }
-
-  .main {
-    display: flex;
-    margin: 10px 100px 0 100px;
-    gap: 32px;
-    padding: 50px 100px;
-  }
-  .main3 {
-    display: flex;
-    margin: 10px 100px 0 100px;
-    gap: 32px;
-    padding: 50px 100px;
-  }
-  /* main1 */
-.main1{
-  text-align: center;
-  padding: 2px 30px;
-  margin-top: 100px;
-  }
-  .desc {
-    margin: 3px;
-    font-size: 16px;
-    font-weight: normal;
-  }
-  /* main */
-  .main {
-  margin: 30px 100px 50px;
-  padding: 0 70px;
-  }
-  .main a {
-    all: unset;
-    border: 1px solid #202022;
-    color: #202022;
-    font-size: 18px;
-    cursor: pointer;
-    padding: 10px 60px;
-  }
-  .main a:hover {
-    background-color: #cacaca;
-    transition: none;
-    color: white;
-  }
- 
-  .main img{
-    width: 200px;
-    height: 250px;
-    margin: 0 auto;
-  }
-
   
-  /* name */
 
-.name h1{
-  font-size: 60px;
+  /* <section class="img"> */
+
+  .img1 {
+    list-style: none;
+    margin: 32px 0 0;
+    padding: 0;
+    display: flex !important;
+    gap: 16px;
+    flex-wrap: wrap;
+  }
+
+  .www {
+    display: flex;
+  }
+
+  .img .img1 img {
+    width: calc((100% - 32px) / 3);
+    height: 250px;
+  }
+  
+
+  .main-img{
+    height: 300px;
+    width: 100%;
+  }
 }
-.name{
-  margin: 0 0 0 200px;
-  margin-top: 70px;
-  margin-bottom: 50px;
-  display: flex;
-  gap: 200px;
-}
-.niwa3{
-  width: 450px;
-  height: 550px;
-  margin: 0;
-}
-.Works1{
-  display: flex;
-  gap: 18px;
-}
-.Works2{
+
+
+
+.container {
+  max-width: 800px;
   margin: 0 auto;
-  background: #cacaca;
-  padding: 8px 15px;
+  width: calc(100% - 32px);
+  box-sizing: border-box;
+  padding: 32px 0px;
 }
-
-.Works1 img{
-  object-fit: cover;
-  width: 400px;
-  height: auto;
-  border: #000;
-  
-  margin: 70px 0 70px 0.3px;
-}
-/* enn */
-.enn {
-  width: 200px;
-  height: 200px;
-  margin: 50px 0 0 120px;
-  font-size: 12px;
-}
-div svg {
-  overflow: visible;
-}
-div path {
-  fill: none;
-}
-div text {
-  fill: black;
-}
-
-.block {
-  width: 160px;
-  height: 160px;
-  margin: auto;
-}
-.circleText {
-  overflow: visible;
-  animation: rotation 18s linear infinite;
-  &__circle {
-    fill: none;
-  }
-  &__text {
-    fill: #000;
-    font-size: 12px;
-    letter-spacing: 0.05em;
-  }
-  .desc1{
-    margin: 20px;
-  }
-}
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-.skills1 .ttt{
-  display: flex;
-  margin: 30px 150px 80px 150px;
-  gap: 18px;
-  padding: 10px;
-}
-
-
-
-/* tra */
-.like1{
-  text-align: center;
-}
-.tra{
-  display: flex;
-  margin: 30px 50px  50px;
-
-}
-}
-
-
-
-  .main {
-    margin: 30px 50px 50px;
-    }
-  .main a {
-    all: unset;
-    border: 1px solid #202022;
-    color: #202022;
-    font-size: 18px;
-    cursor: pointer;
-    padding: 10px 60px;
-  }
-  .main a:hover {
-    background-color: #cacaca;
-    transition: none;
-    color: white;
-  }
-  .des1{
-    margin-top: 30px;
-  }
-  .main img{
-    width: 200px;
-    height: 250px;
-    margin: 0 auto;
-  }
-
-.tra img{
-  width: 250px;
-  height: 250px;
-  margin: 10px 30px  5px;
-}
-.yoy p{
-  font-size: 12px;
-  margin: 20px;
-  margin-top: 8px;
-}
-
-/*  */
-.name3 {
-  opacity: 0;
-  transition: opacity 3s, transform 2s;
-}
-
-.name3.r {
-  transform: translateY(-10px);
-}
-
-.name3.appear {
-  opacity: 1;
-  transform: none;
-}
-
-.niwa3 {
-  opacity: 0;
-  transition: opacity 10s, transform 5s;
-
-}
-
-.niwa3 {
-  transform: translateY(-100px);
-}
-
-.niwa3.appear {
-  opacity: 1;
-  transform: none;
-}
-
-
-.yoy {
-  opacity: 0;
-  transition: opacity 5s, transform 3s;
-
-}
-.yoy {
-  transform: translateY(0);
-}
-
-.yoy.appear {
-  opacity: 1;
-  transform: none;
-}
-.main3 {
-  transform: translateY(0);
-}
-
-.main3.appear {
-  opacity: 1;
-  transform: none;
-}
-.main3 {
-  opacity: 0;
-  transition: opacity 2s, transform 3s;
-}
-.desc1 {
-  transform: translateY(-30px);
-}
-
-.desc1.appear {
-  opacity: 1;
-  transform: none;
-}
-.desc1 {
-  opacity: 0;
-  transition: opacity 2s, transform 3s;
-}
-
-.main11{
-  margin-bottom: 3px;
-  text-align: center;
-  margin: 0 30px 0;
-}
-.pic1{
-  margin: auto;
-}
-.desc {
-  opacity: 0;
-  transition: opacity 3s, transform 2s;
-}
-
-.desc {
-  transform: translateX(+300px);
-}
-
-.desc.appear {
-  opacity: 1;
-  transform: none;
-}
-
-.Works1 {
-  opacity: 0;
-  transition: opacity 3s, transform 2s;
-}
-
-
-
-.Works1 {
-  transform: translateY(0);
-}
-
-.Works1.appear {
-  opacity: 1;
-  transform: none;
-}
-.skills1 {
-  opacity: 0;
-  transition: opacity 2s, transform 3s;
-}
-
-.skills1 {
-  transform: translateY(-50px);
-}
-
-.skills1.appear {
-  opacity: 1;
-  transform: none;
-}
-
-.ini {
-  opacity: 0;
-  transition: opacity 2s, transform 3s;
-  transform: translateY(-50px);
-}
-
-.ini.appear {
-  opacity: 1;
-  transform: none;
-}
-.wqw{
-  margin: 0 0 0 550px;
-}
-
-.en1 {
-  width: 50px;
-  height: 50px;
-  margin: 0 0 0 300px;
-  font-size: 12px;
-}
-
-.block1 {
-  width: 70px;
-  height: 70px;
-  margin: auto;
-}
-
